Removed PermGen argument in Eclipse launcher (deprecated in Java 8). Update copyright years for all modes.